--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "history": "^5.3.0",
     "minipass": "^7.0.4",
+    "openai": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
